@@ -16,6 +16,7 @@
     ADDED: import/export of keyboard shortcuts
     ADDED: mouse selection modes are back! thanks to heiner for doing the work
 
+    FIXED: [ 1101237 ] the reload shortcut is always set to Ctrl+R at startup
     FIXED: rename extension bug in kde 3.3
     FIXED: crash on startup due to restoring of last size and position
     FIXED: couldn't sort case sensative on some systems (see KDE bug #40131)
